disable cibling preview UI when editing a preview

--- a/views/lexicon/forms/repeatable.html.twig
+++ b/views/lexicon/forms/repeatable.html.twig
@@ -13,6 +13,7 @@
             'headings': [
                 { 'label': 'Name', 'name': 'full_name' }
             ],
+            'max-entries': 3,
             'add-new-group-text': 'Add',
             'add-another-group-text': 'Add another'
         }) }}
