add tests for editing groups

--- a/views/pulsar/v2/helpers/form.html.twig
+++ b/views/pulsar/v2/helpers/form.html.twig
@@ -2159,7 +2159,7 @@ data-*        | string | Data attributes, eg: `'data-foo': 'bar'`
                                     {{
                                         html.button({
                                             'data-repeater-save-group': 'true',
-                                            'label': 'Add',
+                                            'label': 'Save',
                                             'class': 'btn--primary repeater__save-group',
                                             'type': 'button'
                                         })
