add working examples

--- a/views/lexicon/forms/repeatable.html.twig
+++ b/views/lexicon/forms/repeatable.html.twig
@@ -11,7 +11,14 @@
             'label': 'The Pulsar team',
             'empty': 'You have not added any team members',
             'headings': [
-                { 'label': 'Name', 'name': 'full_name' }
+                { name: 'checkbox', label: 'Checkbox' },
+                { name: 'date_picker', label: 'Date' },
+                { name: 'password', label: 'Password' },
+                { name: 'size', label: 'Range' },
+                { name: 'text', label: 'Text' },
+                { name: 'textarea', label: 'Textarea' },
+                { name: 'time', label: 'Time' },
+                { name: 'switch', label: 'Switch' }
             ],
             'max-entries': 3,
             'add-new-group-text': 'Add',
@@ -25,10 +32,67 @@
             }}
 
             {{
+                form.checkbox({
+                    'label': 'Default checkbox',
+                    'id': 'checkbox',
+                    'name': 'checkbox'
+                })
+            }}
+
+            {{
+                form.date({
+                    'label': 'Date picker',
+                    'id': 'date_picker',
+                    'name': 'date_picker'
+                })
+            }}
+
+            {{
+                form.password({
+                    'label': 'Your password',
+                    'id': 'password',
+                    'name': 'password'
+                })
+            }}
+
+            {{
+                form.range({
+                    'label': 'Size',
+                    'id': 'size',
+                    'name': 'size'
+                })
+            }}
+
+            {{
                 form.text({
-                    'label': 'Full name',
-                    'class': 'form__control-col--8',
-                    'name': 'full_name'
+                    'label': 'text',
+                    'id': 'text',
+                    'name': 'text'
+                })
+            }}
+
+            {{
+                form.textarea({
+                    'label': 'Textarea',
+                    'id': 'textarea',
+                    'name': 'textarea'
+                })
+            }}
+
+            {{
+                form.time({
+                    'label': 'Time',
+                    'id': 'time',
+                    'name': 'time'
+                })
+            }}
+
+            {{
+                form.toggle_switch({
+                    'checked': false,
+                    'id': 'switch',
+                    'label': 'Switch',
+                    'name': 'switch'
                 })
             }}
 
