Add Password Meter & Toggle Variations to Lexicon

--- a/views/lexicon/forms/password.html.twig
+++ b/views/lexicon/forms/password.html.twig
@@ -54,6 +54,37 @@
     }}
 
     {{ form.fieldset_end() }}
+    {{ form.fieldset_start({ 'legend': 'Password Strength Checker' }) }}
+
+    {{
+        form.password({
+            'class': 'password__meter',
+            'id': 'password__meter',
+            'label': 'Password field with Password Strenght Meter'
+        })
+    }}
+
+    {{
+        form.password({
+            'append': html.button({'label': html.icon('eye'), 'id': 'password__toggle__button', 'class': 'btn--naked', 'type': 'button' }),
+            'append_type': 'button',
+            'class': 'password__toggle',
+            'id': 'password__toggle',
+            'label': 'Password field with Visibility Toggle'
+        })
+    }}
+
+    {{
+        form.password({
+            'append': html.button({'label': html.icon('eye'), 'id': 'password__metertoggle__button', 'class': 'btn--naked', 'type': 'button' }),
+            'append_type': 'button',
+            'class': 'password__meter password__toggle',
+            'id': 'password__metertoggle',
+            'label': 'Composite Password field with Meter and Toggle'
+        })
+    }}
+
+    {{ form.fieldset_end() }}
     {{ form.fieldset_start({ 'legend': 'Alignment' }) }}
 
     {{
@@ -369,7 +400,6 @@
     }}
 
     {{ form.fieldset_end() }}
-
     {{
         form.end()
     }}
