--- a/stylesheets/_component.password.scss
+++ b/stylesheets/_component.password.scss
@@ -1,4 +1,4 @@
-.pass-graybar {
+.password__graybar {
   background-color: color(gray, lighter);
   border-bottom-left-radius: 4px;
   border-bottom-right-radius: 4px;
@@ -7,7 +7,7 @@
   width: 100%;
 }
 
-.pass-colorbar {
+.password__colorbar {
   background-image: url('../images/passwordstrength.jpg');
   height: 3px;
   left: 0;
@@ -15,30 +15,31 @@
   top: 0;
 }
 
-.pass-percent {
+.password__percent {
   margin-right: 5px;
 }
 
-.pass-percent,
-.pass-text {
+.password__percent,
+.password__text {
   font-size: 1em;
 }
 
-.password-toggle span.input-group-btn {
+.password__meter span.input-group-btn {
   vertical-align: top !important;
 }
 
-.password-toggle input {
-   &:focus {
-        border-color: #66afe9;
+.password__meter input {
+    &:focus {
         border-bottom-left-radius: 0;
         border-bottom-right-radius: 0;
+        border-color: #66afe9;
         outline: 0;
         box-shadow: inset 0 1px 1px rgba(0, 0, 0, .075), 0 0 8px rgba(102, 175, 233, .6);
-   }
+    }
 }
 
-.pass-wrapper {
-  display: inherit;
-  width: 100%;
+.password__wrapper.form__control {
+    background-color: transparent !important;
+    display: inherit;
+    padding: 0 !important;
 }
