Fix Typo in word Strength

--- a/views/lexicon/forms/password.html.twig
+++ b/views/lexicon/forms/password.html.twig
@@ -60,7 +60,7 @@
         form.password({
             'class': 'password__meter',
             'id': 'password__meter',
-            'label': 'Password field with Password Strenght Meter'
+            'label': 'Password field with Password Strength Meter'
         })
     }}
 
