--- a/stylesheets/_component.password.scss
+++ b/stylesheets/_component.password.scss
@@ -8,7 +8,7 @@
 }
 
 .password__colorbar {
-  background-image: url('../images/passwordstrength.jpg');
+  background-image: url($image-path + 'passwordstrength.jpg');
   height: 3px;
   left: 0;
   position: absolute;
