New tab for form.compound() lexicon page

--- a/views/lexicon/forms.html.twig
+++ b/views/lexicon/forms.html.twig
@@ -5,6 +5,7 @@
 {% set tab_buttongroup %}{% include 'lexicon/forms/button-group.html.twig' %}{% endset %}
 {% set tab_colour %}{% include 'lexicon/forms/colour.html.twig' %}{% endset %}
 {% set tab_content %}{% include 'lexicon/forms/content.html.twig' %}{% endset %}
+{% set tab_compound %}{% include 'lexicon/forms/compound.html.twig' %}{% endset %}
 {% set tab_checkbox %}{% include 'lexicon/forms/checkbox.html.twig' %}{% endset %}
 {% set tab_date %}{% include 'lexicon/forms/date.html.twig' %}{% endset %}
 {% set tab_dropzone %}{% include 'lexicon/forms/dropzone.html.twig' %}{% endset %}
@@ -42,6 +43,11 @@
           "id"    : "colour",
           "label" : "Colour",
           "src"   : tab_colour
+        },
+        {
+          "id"    : "compound",
+          "label" : "Compound",
+          "src"   : tab_compound
         },
         {
           "id"    : "content",
