Housekeeping duplicate IDs in the compound lexicon page

--- a/views/lexicon/forms/compound.html.twig
+++ b/views/lexicon/forms/compound.html.twig
@@ -17,7 +17,7 @@
                 {
                     'class': 'form__control-col--1',
                     'label': 'Day',
-                    'id': 'dd',
+                    'id': 'dd-1',
                     'placeholder': 'DD',
                     'show-label': false,
                     'type': 'text'
@@ -25,7 +25,7 @@
                 {
                     'class': 'form__control-col--1',
                     'label': 'Month',
-                    'id': 'mm',
+                    'id': 'mm-1',
                     'placeholder': 'MM',
                     'show-label': false,
                     'type': 'text'
@@ -33,7 +33,7 @@
                 {
                     'class': 'form__control-col--1',
                     'label': 'Year',
-                    'id': 'yyyy',
+                    'id': 'yyyy-1',
                     'placeholder': 'YYYY',
                     'show-label': false,
                     'type': 'text'
@@ -51,7 +51,7 @@
                 {
                     'class': 'form__control-col--1',
                     'label': 'Value',
-                    'id': 'value',
+                    'id': 'value-1',
                     'maxlength': '3',
                     'show-label': false,
                     'type': 'text'
@@ -59,7 +59,7 @@
                 {
                     'class': 'u-width-auto',
                     'label': 'Unit of time',
-                    'id': 'Unit',
+                    'id': 'Unit-1',
                     'show-label': false,
                     'type': 'select',
                     'options': [
@@ -90,7 +90,7 @@
                 {
                     'class': 'form__control-col--1',
                     'label': 'Day',
-                    'id': 'dd',
+                    'id': 'dd-2',
                     'placeholder': 'DD',
                     'show-label': false,
                     'type': 'text'
@@ -98,7 +98,7 @@
                 {
                     'class': 'form__control-col--1',
                     'label': 'Month',
-                    'id': 'mm',
+                    'id': 'mm-2',
                     'placeholder': 'MM',
                     'show-label': false,
                     'type': 'text'
@@ -106,7 +106,7 @@
                 {
                     'class': 'form__control-col--1',
                     'label': 'Year',
-                    'id': 'yyyy',
+                    'id': 'yyyy-2',
                     'placeholder': 'YYYY',
                     'show-label': false,
                     'type': 'text'
@@ -125,7 +125,7 @@
                 {
                     'class': 'form__control-col--1',
                     'label': 'Value',
-                    'id': 'value',
+                    'id': 'value-2',
                     'maxlength': '3',
                     'show-label': false,
                     'type': 'text'
@@ -133,7 +133,7 @@
                 {
                     'class': 'u-width-auto',
                     'label': 'Unit of time',
-                    'id': 'Unit',
+                    'id': 'Unit-2',
                     'show-label': false,
                     'type': 'select',
                     'options': [
@@ -162,7 +162,7 @@
                 {
                     'class': 'form__control-col--1',
                     'label': 'Value',
-                    'id': 'value',
+                    'id': 'value-3',
                     'maxlength': '3',
                     'show-label': false,
                     'type': 'text'
@@ -170,7 +170,7 @@
                 {
                     'class': 'u-width-auto',
                     'label': 'Unit of time',
-                    'id': 'Unit',
+                    'id': 'Unit-3',
                     'show-label': false,
                     'type': 'select',
                     'options': [
@@ -199,7 +199,7 @@
                 {
                     'class': 'form__control-col--1',
                     'label': 'Value',
-                    'id': 'value',
+                    'id': 'value-4',
                     'maxlength': '3',
                     'show-label': false,
                     'type': 'text'
@@ -207,7 +207,7 @@
                 {
                     'class': 'u-width-auto',
                     'label': 'Unit of time',
-                    'id': 'Unit',
+                    'id': 'Unit-4',
                     'show-label': false,
                     'type': 'select',
                     'options': [
@@ -238,7 +238,7 @@
                 {
                     'class': 'form__control-col--1',
                     'label': 'Day',
-                    'id': 'dd',
+                    'id': 'dd-3',
                     'placeholder': 'DD',
                     'show-label': false,
                     'type': 'text'
@@ -246,7 +246,7 @@
                 {
                     'class': 'form__control-col--1',
                     'label': 'Month',
-                    'id': 'mm',
+                    'id': 'mm-3',
                     'placeholder': 'MM',
                     'show-label': false,
                     'type': 'text'
@@ -254,7 +254,7 @@
                 {
                     'class': 'form__control-col--1',
                     'label': 'Year',
-                    'id': 'yyyy',
+                    'id': 'yyyy-3',
                     'placeholder': 'YYYY',
                     'show-label': false,
                     'type': 'text'
@@ -273,7 +273,7 @@
                 {
                     'class': 'form__control-col--1',
                     'label': 'Day',
-                    'id': 'dd',
+                    'id': 'dd-4',
                     'placeholder': 'DD',
                     'show-label': false,
                     'type': 'text'
@@ -281,7 +281,7 @@
                 {
                     'class': 'form__control-col--1',
                     'label': 'Month',
-                    'id': 'mm',
+                    'id': 'mm-4',
                     'placeholder': 'MM',
                     'show-label': false,
                     'type': 'text'
@@ -289,7 +289,7 @@
                 {
                     'class': 'form__control-col--1',
                     'label': 'Year',
-                    'id': 'yyyy',
+                    'id': 'yyyy-4',
                     'placeholder': 'YYYY',
                     'show-label': false,
                     'type': 'text'
@@ -308,7 +308,7 @@
                 {
                     'class': 'form__control-col--1',
                     'label': 'Day',
-                    'id': 'dd',
+                    'id': 'dd-5',
                     'placeholder': 'DD',
                     'show-label': false,
                     'type': 'text'
@@ -316,7 +316,7 @@
                 {
                     'class': 'form__control-col--1',
                     'label': 'Month',
-                    'id': 'mm',
+                    'id': 'mm-5',
                     'placeholder': 'MM',
                     'show-label': false,
                     'type': 'text'
@@ -324,7 +324,7 @@
                 {
                     'class': 'form__control-col--1',
                     'label': 'Year',
-                    'id': 'yyyy',
+                    'id': 'yyyy-5',
                     'placeholder': 'YYYY',
                     'show-label': false,
                     'type': 'text'
@@ -344,7 +344,7 @@
                 {
                     'class': 'form__control-col--1',
                     'label': 'Day',
-                    'id': 'dd',
+                    'id': 'dd-6',
                     'placeholder': 'DD',
                     'show-label': false,
                     'type': 'text'
@@ -352,7 +352,7 @@
                 {
                     'class': 'form__control-col--1 has-error',
                     'label': 'Month',
-                    'id': 'mm',
+                    'id': 'mm-6',
                     'placeholder': 'MM',
                     'show-label': false,
                     'type': 'text'
@@ -360,7 +360,7 @@
                 {
                     'class': 'form__control-col--1',
                     'label': 'Year',
-                    'id': 'yyyy',
+                    'id': 'yyyy-6',
                     'placeholder': 'YYYY',
                     'show-label': false,
                     'type': 'text'
@@ -379,7 +379,7 @@
                 {
                     'class': 'form__control-col--1',
                     'label': 'Day',
-                    'id': 'dd',
+                    'id': 'dd-7',
                     'placeholder': 'DD',
                     'show-label': false,
                     'type': 'text'
@@ -387,7 +387,7 @@
                 {
                     'class': 'form__control-col--1',
                     'label': 'Month',
-                    'id': 'mm',
+                    'id': 'mm-7',
                     'placeholder': 'MM',
                     'show-label': false,
                     'type': 'text'
@@ -395,7 +395,7 @@
                 {
                     'class': 'form__control-col--1',
                     'label': 'Year',
-                    'id': 'yyyy',
+                    'id': 'yyyy-7',
                     'placeholder': 'YYYY',
                     'show-label': false,
                     'type': 'text'
@@ -417,7 +417,7 @@
                 {
                     'class': 'form__control-col--1',
                     'label': 'Day',
-                    'id': 'dd',
+                    'id': 'dd-8',
                     'placeholder': 'DD',
                     'show-label': false,
                     'type': 'text'
@@ -425,7 +425,7 @@
                 {
                     'class': 'form__control-col--1',
                     'label': 'Month',
-                    'id': 'mm',
+                    'id': 'mm-8',
                     'placeholder': 'MM',
                     'show-label': false,
                     'type': 'text'
@@ -433,7 +433,7 @@
                 {
                     'class': 'form__control-col--1',
                     'label': 'Year',
-                    'id': 'yyyy',
+                    'id': 'yyyy-8',
                     'placeholder': 'YYYY',
                     'show-label': false,
                     'type': 'text'
@@ -452,7 +452,7 @@
                 {
                     'class': 'form__control-col--1',
                     'label': 'Day',
-                    'id': 'dd',
+                    'id': 'dd-9',
                     'placeholder': 'DD',
                     'show-label': false,
                     'type': 'text'
@@ -460,7 +460,7 @@
                 {
                     'class': 'form__control-col--1',
                     'label': 'Month',
-                    'id': 'mm',
+                    'id': 'mm-9',
                     'placeholder': 'MM',
                     'show-label': false,
                     'type': 'text'
@@ -468,7 +468,7 @@
                 {
                     'class': 'form__control-col--1',
                     'label': 'Year',
-                    'id': 'yyyy',
+                    'id': 'yyyy-9',
                     'placeholder': 'YYYY',
                     'show-label': false,
                     'type': 'text'
@@ -487,7 +487,7 @@
                 {
                     'class': 'form__control-col--1',
                     'label': 'Day',
-                    'id': 'dd',
+                    'id': 'dd-10',
                     'placeholder': 'DD',
                     'show-label': false,
                     'type': 'text'
@@ -495,7 +495,7 @@
                 {
                     'class': 'form__control-col--1',
                     'label': 'Month',
-                    'id': 'mm',
+                    'id': 'mm-10',
                     'placeholder': 'MM',
                     'show-label': false,
                     'type': 'text'
@@ -503,7 +503,7 @@
                 {
                     'class': 'form__control-col--1',
                     'label': 'Year',
-                    'id': 'yyyy',
+                    'id': 'yyyy-10',
                     'placeholder': 'YYYY',
                     'show-label': false,
                     'type': 'text'
@@ -522,7 +522,7 @@
                 {
                     'class': 'form__control-col--1',
                     'label': 'Day',
-                    'id': 'dd',
+                    'id': 'dd-11',
                     'placeholder': 'DD',
                     'show-label': false,
                     'type': 'text'
@@ -530,7 +530,7 @@
                 {
                     'class': 'form__control-col--1',
                     'label': 'Month',
-                    'id': 'mm',
+                    'id': 'mm-11',
                     'placeholder': 'MM',
                     'show-label': false,
                     'type': 'text'
@@ -538,7 +538,7 @@
                 {
                     'class': 'form__control-col--1',
                     'label': 'Year',
-                    'id': 'yyyy',
+                    'id': 'yyyy-12',
                     'placeholder': 'YYYY',
                     'show-label': false,
                     'type': 'text'
@@ -556,7 +556,7 @@
                 {
                     'class': 'form__control-col--1',
                     'label': 'Day',
-                    'id': 'dd',
+                    'id': 'dd-13',
                     'placeholder': 'DD',
                     'show-label': false,
                     'type': 'text',
@@ -565,7 +565,7 @@
                 {
                     'class': 'form__control-col--1',
                     'label': 'Month',
-                    'id': 'mm',
+                    'id': 'mm-13',
                     'placeholder': 'MM',
                     'show-label': false,
                     'type': 'text',
@@ -574,7 +574,7 @@
                 {
                     'class': 'form__control-col--1',
                     'label': 'Year',
-                    'id': 'yyyy',
+                    'id': 'yyyy-13',
                     'placeholder': 'YYYY',
                     'show-label': false,
                     'type': 'text',
