Fix Tab Hightlight in Forms

--- a/views/lexicon/forms.html.twig
+++ b/views/lexicon/forms.html.twig
@@ -27,7 +27,8 @@
         {
           "id"    : "buttongroup",
           "label" : "Button Group",
-          "src"   : tab_buttongroup
+          "src"   : tab_buttongroup,
+          "active": true
         },
         {
           "id"    : "checkbox",
@@ -87,8 +88,7 @@
         {
           "id"    : "select",
           "label" : "Select",
-          "src"   : tab_select,
-          "active": true
+          "src"   : tab_select
         },
         {
           "id"    : "select2",
