Add Password Styles for Criteria

--- a/stylesheets/_component.password.scss
+++ b/stylesheets/_component.password.scss
@@ -43,3 +43,18 @@
     display: inherit;
     padding: 0 !important;
 }
+
+.password__criteria {
+    ul {
+        list-style: none;
+    }
+
+    li {
+        &::before {
+            content: '\f14a';
+            color: blue;
+            font-family: 'FontAwesome';
+            margin: 0 5px 0 0;
+        }
+    }
+}
