Add Password Criteria Styles

--- a/stylesheets/_component.password.scss
+++ b/stylesheets/_component.password.scss
@@ -51,8 +51,26 @@
 
     li {
         &::before {
-            content: '\f14a';
+            content: '\f111';
+            color: gray;
+            font-family: 'FontAwesome';
+            margin: 0 5px 0 0;
+        }
+    }
+
+    li.passed {
+        &::before {
+            content: '\f00c';
             color: blue;
+            font-family: 'FontAwesome';
+            margin: 0 5px 0 0;
+        }
+    }
+
+    li.failed {
+        &::before {
+            content: "\f00d";
+            color: red;
             font-family: 'FontAwesome';
             margin: 0 5px 0 0;
         }
