--- a/views/pulsar/v2/helpers/form.html.twig
+++ b/views/pulsar/v2/helpers/form.html.twig
@@ -2121,7 +2121,9 @@ data-*        | string | Data attributes, eg: `'data-foo': 'bar'`
         data-repeater-max-entries="{{ options['max-entries']|default(false) }}"
         data-repeater-preview-colspan="{{ options.headings|length + 1 }}"
     >
-        <div class="repeater__saved-data" style="display: none;"></div>
+        <pre>DEBUG SAVED DATA</pre>
+        <div class="repeater__saved-data"></div>
+        <pre>================</pre>
         <div class="form__group">
             {{
                 elem.label({
@@ -2148,7 +2150,8 @@ data-*        | string | Data attributes, eg: `'data-foo': 'bar'`
                         </tbody>
                         <tfoot>
                         <tr class="repeater__group" data-repeater-new-group>
-                            <td class="table__form" colspan="{{ headingLength + 1 }}" data-repeater-new-group-controls>
+                            <td class="table__form" colspan="{{ headingLength + 1 }}">
+                                <div data-repeater-new-group-controls>
 
 {% endspaceless %}
 {% endmacro %}
@@ -2156,6 +2159,7 @@ data-*        | string | Data attributes, eg: `'data-foo': 'bar'`
 {% macro repeatable_end() %}
 {% import '@pulsar/pulsar/v2/helpers/html.html.twig' as html %}
 {% spaceless %}
+                                </div>
                                 <div class="form__actions repeater__group-actions">
                                     {{
                                         html.button({
