Change Double Quote to Single

--- a/stylesheets/_component.password.scss
+++ b/stylesheets/_component.password.scss
@@ -69,7 +69,7 @@
 
     li.failed {
         &::before {
-            content: "\f00d";
+            content: '\f00d';
             color: red;
             font-family: 'FontAwesome';
             margin: 0 5px 0 0;
