Add Password Field with Visibility Text Toggle

--- a/views/lexicon/forms/password.html.twig
+++ b/views/lexicon/forms/password.html.twig
@@ -53,6 +53,26 @@
         })
     }}
 
+    {{
+        form.password({
+            'append': html.button({'label': html.icon('eye'), 'id': 'password__toggle__button', 'class': 'btn--naked', 'type': 'button' }),
+            'append_type': 'button',
+            'class': 'password__toggle',
+            'id': 'password__toggle',
+            'label': 'Password field with Visibility Toggle (Icon)'
+        })
+    }}
+
+    {{
+        form.password({
+            'append': html.button({'label': 'SHOW', 'id': 'password__texttoggle__button', 'class': 'btn--naked password__toggle__button', 'type': 'button' }),
+            'append_type': 'button',
+            'class': 'password__toggle',
+            'id': 'password__texttoggle',
+            'label': 'Password field with Visibility Toggle (Text)'
+        })
+    }}
+
     {{ form.fieldset_end() }}
     {{ form.fieldset_start({ 'legend': 'Password Strength Checker' }) }}
 
@@ -66,21 +86,21 @@
 
     {{
         form.password({
-            'append': html.button({'label': html.icon('eye'), 'id': 'password__toggle__button', 'class': 'btn--naked', 'type': 'button' }),
+            'append': html.button({'label': html.icon('eye'), 'id': 'password__metertoggle__button', 'class': 'btn--naked', 'type': 'button' }),
             'append_type': 'button',
-            'class': 'password__toggle',
-            'id': 'password__toggle',
-            'label': 'Password field with Visibility Toggle'
+            'class': 'password__meter password__toggle',
+            'id': 'password__metertoggle',
+            'label': 'Composite Password field with Meter and Toggle (Icon)'
         })
     }}
 
     {{
         form.password({
-            'append': html.button({'label': html.icon('eye'), 'id': 'password__metertoggle__button', 'class': 'btn--naked', 'type': 'button' }),
+            'append': html.button({'label': 'SHOW', 'id': 'password__metertoggle__button-2', 'class': 'btn--naked password__toggle__button', 'type': 'button' }),
             'append_type': 'button',
             'class': 'password__meter password__toggle',
-            'id': 'password__metertoggle',
-            'label': 'Composite Password field with Meter and Toggle'
+            'id': 'password__metertoggle-2',
+            'label': 'Composite Password field with Meter and Toggle (Text)'
         })
     }}
 
