Add Password Strength Checker Styles

--- a/stylesheets/_component.password.scss
+++ b/stylesheets/_component.password.scss
@@ -44,33 +44,51 @@
     padding: 0 !important;
 }
 
+.password__meter.password__toggle .password__criteria {
+    display: block;
+    float: left;
+    position: relative;
+}
+
+button.password__toggle__button {
+    width: 80px;
+}
+
 .password__criteria {
+    margin-top: 10px;
+
     ul {
         list-style: none;
     }
 
     li {
+        color: color(gray, lighter);
+
         &::before {
             content: '\f111';
-            color: gray;
+            color: color(gray, lighter);
             font-family: 'FontAwesome';
             margin: 0 5px 0 0;
         }
     }
 
     li.passed {
+        color: color(gray, dark);
+
         &::before {
             content: '\f00c';
-            color: blue;
+            color: color(primary, base);
             font-family: 'FontAwesome';
             margin: 0 5px 0 0;
         }
     }
 
     li.failed {
+        color: color(danger);
+
         &::before {
             content: '\f00d';
-            color: red;
+            color: color(danger);
             font-family: 'FontAwesome';
             margin: 0 5px 0 0;
         }
