--- a/views/lexicon/patterns/masterswitch/masterswitch-enabled.html.twig
+++ b/views/lexicon/patterns/masterswitch/masterswitch-enabled.html.twig
@@ -62,7 +62,7 @@
 
             {{
                 form.end({
-                    'class': 'form__actions--flush',
+                    'class': 'form__actions',
                     'actions': [
                         html.button({
                             'label': 'Save Changes',
